--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
             "email": "gustavoramaldes@gmail.com"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
 	"require": {},
 	"autoload": {
         "psr-4": {
